Agrego soluciones de la practica 1 de PyE

--- a/3 Ano/Estructuras de Datos y Algoritmos II/Soluciones/Practica 0.lyx
+++ b/3 Ano/Estructuras de Datos y Algoritmos II/Soluciones/Practica 0.lyx
@@ -1148,7 +1148,7 @@ Solución
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula ${\displaystyle \sum_{i=1}^{n}}i^{k}=1^{k}+2^{k}+\ldots+n^{k}\leq n^{k}+\ldots+n^{+}=nn^{k}=n^{k+1}$
+\begin_inset Formula ${\displaystyle \sum_{i=1}^{n}}i^{k}=1^{k}+2^{k}+\ldots+n^{k}\leq n^{k}+\ldots+n^{k}=nn^{k}=n^{k+1}$
 \end_inset
 
 .
