Corrijo soluciones de PyE

--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 1.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 1.lyx
@@ -1314,7 +1314,7 @@ Unilateral a izquierda.
 \end_inset
 
  y 
-\begin_inset Formula $\beta=\frac{10}{18}$
+\begin_inset Formula $\beta=\frac{8}{18}$
 \end_inset
 
 .
@@ -5113,7 +5113,7 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-\begin_inset Formula $\frac{7}{30}$
+\begin_inset Formula $\frac{6}{30}$
 \end_inset
 
 .
@@ -6649,7 +6649,7 @@ Rechazar
 \end_inset
 
  y 
-\begin_inset Formula $\beta=\frac{14}{25}$
+\begin_inset Formula $\beta=\frac{11}{25}$
 \end_inset
 
 .
@@ -7596,7 +7596,7 @@ Unilateral a izquierda.
 \end_inset
 
  y 
-\begin_inset Formula $\beta=\frac{9}{15}$
+\begin_inset Formula $\beta=\frac{6}{15}$
 \end_inset
 
 .
@@ -7802,7 +7802,7 @@ COMPLETAR.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+0.04; 0.03.
 \end_layout
 
 \end_deeper
@@ -7913,6 +7913,10 @@ Supone que los datos fueron estadísticamente significativos al 5%, pero
  ¿Tienes que cambiar el p-value que propusiste en c)? Si no, explica por
  qué.
  Si lo tienes que cambiar, propone otro p-value adecuado.
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_layout Paragraph
