Agrego soluciones de IS1

--- a/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Practica 1.lyx
+++ b/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Practica 1.lyx
@@ -1927,7 +1927,7 @@ Juan tiene un perro y Pedro tiene un gato.
 \end_layout
 
 \begin_layout Itemize
-Todos los que tienen una mascota aman a los animales
+Todos los que tienen una mascota aman a los animales.
 \end_layout
 
 \begin_layout Itemize
@@ -1960,22 +1960,7 @@ status open
 
 \begin_layout Plain Layout
 
-animal(perro).
-\end_layout
-
-\begin_layout Plain Layout
-
-animal(gato).
-\end_layout
-
-\begin_layout Plain Layout
-
-tiene(juan,perro).
-\end_layout
-
-\begin_layout Plain Layout
-
-tiene(pedro,gato).
+COMPLETAR.
 \end_layout
 
 \end_inset
@@ -2035,7 +2020,7 @@ Frodo intentó destruir a Saurón.
 
 \begin_layout Standard
 Probar si odia Frodo a Sauron aplicando resolución.
- Utilizando un programa en PROLOG contestar si Alguien que vive en la Comarca
+ Utilizando un programa en PROLOG contestar si alguien que vive en la Comarca
  odia a Sauron.
 \end_layout
 
