Corrijo y agrego soluciones de IS1

--- a/4 Ano/Ingenieria del Software I/Soluciones/Practica 1.lyx
+++ b/4 Ano/Ingenieria del Software I/Soluciones/Practica 1.lyx
@@ -6,9 +6,7 @@
 \origin unavailable
 \textclass article
 \begin_preamble
-\usepackage{czt}
-\usepackage{xcolor}
-\definecolor{ZedColor}{cmyk}{0.50,1,0,0}
+\usepackage[colour]{czt}
 \end_preamble
 \use_default_options true
 \maintain_unincluded_children false
